# LineArtDrawer

./: CMakeLists.txt  README.md  build_windows.bat
.github/workflows/: build-windows-msvc.yml  build-windows.yml
models/: .gitignore  download_models.bat  download_models.sh
models/hed/: README.md
models/mlsd/: READ.md
resources/: SketchMaster.exe.manifest  SketchMaster.rc
scripts/: lineart_external.py
src/: build_info.h.in  main.cpp
src/core/: HEDDetector.cpp  HEDDetector.h  ImageProcessor.cpp  ImageProcessor.h  ImageTracer.cpp  ImageTracer.h  LineArtGenerator.cpp  LineArtGenerator.h  MLSDDetector.cpp  MLSDDetector.h  PathSimplifier.cpp  PathSimplifier.h  SVGExporter.cpp  SVGExporter.h  SVGImporter.cpp  SVGImporter.h
src/input/: HotkeyManager.cpp  HotkeyManager.h
src/mouse/: DrawingAreaSelector.cpp  DrawingAreaSelector.h  MouseController.cpp  MouseController.h  MousePainter.cpp  MousePainter.h
src/ui/: ControlPanel.cpp  ControlPanel.h  MainWindow.cpp  MainWindow.h  SketchCanvas.cpp  SketchCanvas.h
